2-server versions with PROXY

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
+  "proxy": "http://localhost:3010",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
